Fixes spacing on splash and login/signup forms

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -1,50 +1,48 @@
 #footer {
-    border: 1px solid red;
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: space-between;
-    align-items: center;
-    gap: 17px;
-    width: 100%;
-    padding: 25px 0;
-    background-color: rgb(220, 219, 219);
-    color: black;
-    font-size: 14px;
-    border: 1px solid rgb(227, 227, 227);;
-    margin-bottom: -100px;
+  border: 1px solid red;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 17px;
+  width: 100%;
+  padding: 25px 0;
+  background-color: rgb(220, 219, 219);
+  color: black;
+  font-size: 18px;
+  border: 1px solid rgb(227, 227, 227);
+  margin-bottom: -100px;
 }
 
 #footer-left {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 .footer-github-icon {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-right: 30px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-right: 30px;
 }
 
-
 .footer-github-icon > a {
-    font-size: 16px;
-    background-color: white;
-    color: black;
-    text-decoration: none;
-    border: 1px solid black;
-    padding: 5px;
-    border-radius: 5px;
-    position: relative;
-    bottom: 2px;
-    box-shadow: 0px 2px 0px black;
+  font-size: 16px;
+  background-color: white;
+  color: black;
+  text-decoration: none;
+  border: 1px solid black;
+  padding: 5px;
+  border-radius: 5px;
+  position: relative;
+  bottom: 2px;
+  box-shadow: 0px 2px 0px black;
 }
 
 .footer-github-icon > a:hover {
-    box-shadow: none;
-    position: relative;
-    bottom: 0;
+  box-shadow: none;
+  position: relative;
+  bottom: 0;
 }
 
-.footer-github-icon > a  > i {
-    margin-right: 7px;
+.footer-github-icon > a > i {
+  margin-right: 7px;
 }
