--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -1,266 +1,260 @@
 #splash_wrapper {
-    margin-top: 90px;
-    background-size: contain;
-    align-items: center;
+  margin-top: 90px;
+  background-size: contain;
+  align-items: center;
 }
 
 .splash_row {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .splash_row > div {
-    height: 600px;
+  height: 600px;
 }
 
 #splash_row1_wrapper,
 #splash_row4_wrapper {
-    width: 100%;
-    background-size: contain;
-    display: flex;
-    justify-content: center;
-
+  width: 100%;
+  background-size: contain;
+  display: flex;
+  justify-content: center;
 }
 
 #splash_row1 {
-    width: 1300px;
+  width: 1300px;
 }
 
 #splash_row1 > div {
-    padding: 20px 40px 20px 40px;
-    width: 50%;
+  padding: 20px 40px 20px 40px;
+  width: 50%;
 }
 
-#splash_row1_right_img_container  {
-    font-size: 350px;
+#splash_row1_right_img_container {
+  font-size: 350px;
 }
 
 #splash_row1_right {
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
-
 #splash_row1_left {
-    gap: 20px;
-    justify-content: center;
-    align-items: flex-start;
-    padding-left: 400px;
+  gap: 20px;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 400px;
 }
 
 #splash_row1_left_foot,
 #splash_row1_left_head {
-    width: 275px;
-    margin-left: 150px;
+  width: 275px;
+  margin-left: 150px;
 }
 
 #splash_signup {
-    margin-left: 150px;
+  margin-left: 150px;
 }
 
 #splash_row1_left {
-    text-align: left;
+  text-align: left;
 }
 
 .splash_head_row {
-    font-size: 30px;
-    font-weight: 700;
+  font-size: 30px;
+  font-weight: 700;
 }
 
 #splash_signup {
-    background-color: #70caae;
-    color: white;
-    padding: 15px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0px 2px 0px rgb(145, 145, 145);
-    position: relative;
-    bottom: 2px;
-    width: 150px;
-    text-align: center;
+  background-color: #70caae;
+  color: white;
+  padding: 15px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 2px 0px rgb(145, 145, 145);
+  position: relative;
+  bottom: 2px;
+  width: 150px;
+  text-align: center;
 }
 
 #splash_signup:hover {
-    border: none;
-    box-shadow: none;
-    position: relative;
-    bottom: 0;
+  border: none;
+  box-shadow: none;
+  position: relative;
+  bottom: 0;
 }
 
 #splash_row2,
 #splash_row3,
 #splash_row4 {
-    width: 100%;
+  width: 100%;
 }
 
 .phone_img {
-    width: 300px;
+  width: 300px;
 }
 
-
 .splash_row > div {
-    padding: 20px 40px 0px 40px;
-    align-items: center;
-    justify-content: flex-end;
-    width: 50%;
-    height: 550px;
+  padding: 20px 40px 0px 40px;
+  align-items: center;
+  justify-content: flex-end;
+  width: 50%;
+  height: 550px;
 }
 
 .splash_box {
-    background-size: contain;
-    color: white;
+  background-size: contain;
+  color: white;
 }
 
 #splash_row2_left,
 #splash_row3_right {
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.8);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.8);
 }
 
 #splash_row2_right {
-    box-shadow: inset 0 0 0 1000px rgba(3, 184, 134, 0.6);
+  box-shadow: inset 0 0 0 1000px rgba(3, 184, 134, 0.6);
 }
 
 #splash_row3_left {
-    box-shadow: inset 0 0 0 1000px rgba(255, 95, 21, 0.7);
+  box-shadow: inset 0 0 0 1000px rgba(255, 95, 21, 0.7);
 }
 
-
 .splash_box_head {
-    margin-bottom: 20px;
-    align-items: center;
-    width: 350px;
+  margin-bottom: 20px;
+  align-items: center;
+  width: 370px;
 }
 
 .splash_box_head > div {
-    text-align: center;
+  text-align: center;
 }
 
 .splash_box_title {
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 5px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .splash_box_text {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 #splash_row4 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    height: 600px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 600px;
 }
 
-
 #splash_signup_bottom {
-    background-color: rgba(128, 128, 128, 0.317);
-    color: white;
-    padding: 15px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0px 2px 0px rgba(145, 145, 145);
-    position: relative;
-    bottom: 2px;
-    width: 150px;
-    text-align: center;
-    border: 2px solid white;
+  background-color: rgba(128, 128, 128, 0.317);
+  color: white;
+  padding: 15px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 2px 0px rgba(145, 145, 145);
+  position: relative;
+  bottom: 2px;
+  width: 150px;
+  text-align: center;
+  border: 2px solid white;
 }
 
 #splash_signup_bottom:hover {
-    box-shadow: none;
-    position: relative;
-    bottom: 0;
+  box-shadow: none;
+  position: relative;
+  bottom: 0;
 }
 
 #splash_row4_left {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 #splash_row4_left_head_top {
-    font-size: 30px;
-    font-weight: 700;
+  font-size: 30px;
+  font-weight: 700;
 }
 
 #splash_row4_left_head_bottom {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 #splash_row4_left {
-    padding: 20px 40px 20px 40px;
-    width: 50%;
+  padding: 20px 40px 20px 40px;
+  width: 50%;
 }
 
 #splash_row4_left_head_bottom {
-    text-align: center;
-    width: 350px;
-    margin-top: 10px;
-    margin-bottom: 30px;
+  text-align: center;
+  width: 350px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 #splash_row4_wrapper {
-    box-shadow: inset 0 0 0 1000px rgba(92, 0, 162, 0.7);
+  box-shadow: inset 0 0 0 1000px rgba(92, 0, 162, 0.7);
 }
 
 #splash_row4_right {
-    width: 50%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
+  width: 50%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
-
 
 .main_icon.active,
 .last_line.active {
-    display: block;
-    opacity: 1;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-name: fadeIn;
+  display: block;
+  opacity: 1;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-name: fadeIn;
 }
 
 .main_icon,
 .last_line {
-    display: none;
-    opacity: 0;
+  display: none;
+  opacity: 0;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 #splash_row1_left_img_container {
-    display: flex;
-    font-size: 45px;
-    gap: 25px;
-    padding-top: 15px;
+  display: flex;
+  font-size: 45px;
+  gap: 25px;
+  padding-top: 15px;
 }
 
 .left_icon {
-    opacity: 0.3;
+  opacity: 0.3;
 }
 
 .left_icon.left_active {
-    opacity: 1;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-name: fadeInLeft;
+  opacity: 1;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-name: fadeInLeft;
 }
 
 @keyframes fadeInLeft {
-    from {
-        opacity: 0.3;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0.3;
+  }
+  to {
+    opacity: 1;
+  }
 }
